@@ -17,6 +17,7 @@ import org.elasticsearch.health.HealthIndicatorResult;
 import org.elasticsearch.health.HealthIndicatorService;
 import org.elasticsearch.health.ImpactArea;
 import org.elasticsearch.health.SimpleHealthIndicatorDetails;
+import org.elasticsearch.health.UserAction;
 import org.elasticsearch.repositories.RepositoryData;
 
 import java.util.Collections;
@@ -43,6 +44,12 @@ public class RepositoryIntegrityHealthIndicatorService implements HealthIndicato
     public static final String NAME = "repository_integrity";
 
     public static final String HELP_URL = "https://ela.st/fix-repository-integrity";
+    public static final UserAction.Definition CORRUPTED_REPOSITORY = new UserAction.Definition(
+        "corrupt-repo-integrity",
+        "Multiple clusters are writing to the same repository. Remove the repository "
+            + "from the other cluster(s), or mark it as read-only in the other cluster(s), and then re-add the repository to this cluster.",
+        HELP_URL
+    );
 
     public static final String NO_REPOS_CONFIGURED = "No snapshot repositories configured.";
     public static final String NO_CORRUPT_REPOS = "No corrupted snapshot repositories.";
@@ -128,7 +135,7 @@ public class RepositoryIntegrityHealthIndicatorService implements HealthIndicato
                 )
                 : HealthIndicatorDetails.EMPTY,
             impacts,
-            Collections.emptyList()
+            List.of(new UserAction(CORRUPTED_REPOSITORY, corrupted))
         );
     }
 
